# play-projects

./: .gitignore  AGENTS.md  README.md
agent-history-hub/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
agent-history-hub/src/: App.tsx  app-shell.css  styles.css
agent-history-hub/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
agent-history-hub/src-tauri/capabilities/: default.json
agent-history-hub/src-tauri/icons/: icon.icns
agent-history-hub/src-tauri/scripts/: make-rounded-icon.swift
agent-history-hub/src-tauri/src/: app.rs  lib.rs  main.rs  shared.rs  state.rs  tests.rs
agent-history-hub/src-tauri/src/session/: claude_code.rs  codex.rs  mod.rs  opencode.rs
agent-history-hub/src/components/: session-detail.css  session-detail.tsx  session-list.css  session-list.tsx  source-switcher.css  source-switcher.tsx
agent-history-hub/src/lib/: api.ts  store.ts  types.ts
backupgo/: .gitignore  README.md  go.mod  go.sum  main.go
backupgo/cmd/: root.go
backupgo/cmd/backup/: backup.go
backupgo/cmd/logs/: logs.go  logs_test.go
backupgo/cmd/scheduler/: detach_other.go  detach_unix.go  log_rotation.go  log_rotation_test.go  start.go  stop.go
backupgo/cmd/status/: status.go
backupgo/config/: config.go  config_test.go
backupgo/exporter/: docker_volume.go  docker_volume_test.go  mongo.go  mongo_test.go  path.go  postgres.go  postgres_test.go  prepared.go  source.go  util.go
backupgo/notice/: factory.go  mail.go  manager.go  manager_test.go  message_formatter.go  message_formatter_test.go  task_report.go  task_report_test.go  telegram.go
backupgo/oss/: oss.go
backupgo/pkg/consts/: consts.go  paths.go
backupgo/pkg/procutil/: proc_other.go  proc_unix.go
backupgo/state/: state.go
backupgo/task/: task.go
backupgo/utils/: files.go  files_test.go  fnp.go  fnp_test.go  mail.go  tg.go  tg_test.go
deploygo/: .gitignore  AGENTS.md  README.md  go.mod  go.sum  main.go
deploygo/cmd/: build.go  clone.go  deploy.go  list.go  pipeline.go  project_context.go  project_context_test.go  project_select.go  project_select_test.go  root.go  write.go
deploygo/internal/config/: lookup.go  lookup_test.go  parser.go
deploygo/internal/container/: docker.go  labels.go  manager.go  output.go  output_test.go  podman.go  pull_image.go  pull_registry.go  pull_registry_test.go  runtime.go
deploygo/internal/deploy/: connection.go  connection_test.go  executor.go  executor_test.go  sftp_upload_pool.go  sftp_upload_pool_test.go  sftp_uploader.go  sftp_uploader_test.go  ssh_executor.go
deploygo/internal/fileutil/: glob.go  glob_test.go  path.go  path_test.go
deploygo/internal/git/: clone.go
deploygo/internal/pathutil/: pathutil.go  pathutil_test.go
deploygo/internal/retry/: retry.go  retry_test.go
deploygo/internal/stage/: build_scheduler.go  builds.go  builds_test.go  cleanup.go  deploys.go  file.go  security_test.go
ftpgo/: .gitignore  Dockerfile  README.md  config.go  docker-compose.yml  fs.go  go.mod  handlers.go  main.go  middleware.go  path_range_test.go
ftpgo/templates/: index.html
kt-img/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
kt-img/src/: App.vue
kt-img/src-tauri/: Cargo.toml  tauri.conf.json
kt-img/src-tauri/capabilities/: default.json
kt-img/src-tauri/icons/: icon.icns
kt-img/src-tauri/src/: image_processor.rs  lib.rs  main.rs
kt-port/: .gitignore  Cargo.toml  Packager.toml  README.md
kt-port/assets/: icon.icns
kt-port/src/: app.rs  main.rs
kt-port/src/ports/: linux.rs  mod.rs  types.rs
kt-port/ui/: main.slint
kttools/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
kttools/src/: App.vue  main.js
kttools/src-tauri/: Cargo.toml  tauri.conf.json
kttools/src-tauri/capabilities/: default.json
kttools/src-tauri/icons/: icon.icns
kttools/src-tauri/src/: datetime.rs  image_processor.rs  lib.rs  main.rs
kttools/src-tauri/src/ports/: linux.rs  macos.rs  mod.rs  types.rs  utils.rs  windows.rs
lanshare/: .dockerignore  .gitignore  Dockerfile  README.md  config.go  docker-compose.yml  go.mod  handlers.go  improved_storage.go  interfaces.go  main.go  middleware.go  storage.go  types.go
lanshare/js/: vue.global.min.js
lanshare/templates/: index.html
picstash/: .gitignore  README.md  docker-compose.yml
picstash/backend/: Dockerfile  config.yaml.example  go.mod  go.sum
picstash/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
script/: README.md  make-rounded-icon-linux.swift  make-rounded-icon-macos.swift  make-rounded-icon.swift
(+83 files in other folders)
