[package]
name = "agent-session-hub"
version = "0.1.0"
description = "Read and inspect local coding-agent sessions."
authors = ["kazma"]
edition = "2021"

[lib]
name = "agent_session_hub"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
