[package]
name = "kt_img"
version = "0.1.0"
description = "Standalone image processing utility extracted from kttools"
authors = ["kazma233"]
edition = "2024"

[lib]
name = "kt_img_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.4"
serde = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
fast_image_resize = { version = "6.0", features = ["image", "rayon"] }
imagesize = "0.14.0"
webp = "0.3"
