[package]
name = "kt_tools"
version = "0.1.0"
description = "开发者工具"
authors = ["kazma233"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kt_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.4"
base64 = "0.22"
urlencoding = "2.1.3"
md5 = "0.8.0"
sha1 = "0.10.6"
tauri-plugin-dialog = "2"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
tauri-plugin-fs = "2.4"
tauri-plugin-clipboard-manager = "2.3"
sysinfo = "0.38"
imagesize = "0.14.0"
